Page MenuHome GnuPG

Kleopatra: Make a few lists and tables more accessible
Testing, NormalPublic

Description

Some lists and tables are missing an accessible name so that the users might not know what the list/table they navigated to contains.

  • List of X.509 directory services in Kleopatra's configuration dialog
  • List of certificate categories in Kleopatra's configuration dialog
  • Lists of certificates in Delete confirmation dialog
  • Table of results in Server lookup dialog
  • Table of certificate chain in S/MIME certificate details dialog

Event Timeline

ikloecker changed the task status from Open to Testing.Oct 16 2025, 9:45 AM

Fixed. When one of the lists/tables gets focus then NVDA should speak something like "<name of list> list" or "<name of table> tree view".

ikloecker moved this task from Backlog to WIP on the vsd34 board.
ikloecker mentioned this in Unknown Object (Maniphest Task).Oct 20 2025, 9:38 AM

Looks mostly good to me on gpg4win-5.0.0-beta395 @ win11.

Issues found:

  • The main icon menu in Configure is another nameless list. Should this be fixed, too?
list
Directory Services

Done:

  • List of X.509 directory services in Kleopatra's configuration dialog
X.509 Directory Services  grouping
Directory services  list  This is a list of all directory services that are configured for use with X.509.
test  not selected
  • List of certificate categories in Kleopatra's configuration dialog
Certificate Categories  tab control
Certificate Categories  tab  Alt+  e
Categories  list
My Own  not selected
  • Lists of certificates in Delete confirmation dialog
Certificates  list  Alt+  T
Conny-cv25519 (certified, OpenPGP, created: 08.03.2023)  not selected
Groups  list  Alt+  a
all-pgp  not selected
  • Table of results in Server lookup dialog
Results  tree view
row 1  Name  column 1  level 1
  • Table of certificate chain in S/MIME certificate details dialog
Certificate chain  tree view
CN=Root-CA 2020,OU=GnuPG.com,O=g10 Code GmbH,C=DE  not selected  expanded  row 1  1  column 1  level 1