Make list of directory services more accessible

GnuPG-bug-id: 7859
(cherry picked from commit b8964898f711502b39ecb273d8d7c5701da70e65)